# onnxruntime_cpp_demo

./: README.md
claasify/: CMakeLists.txt  README.md
claasify/onnxruntime-linux-x64-1.4.0/: GIT_COMMIT_ID
claasify/python/: onnxruntime_yolo_cpn.py
claasify/src/: CMakeLists.txt  main.cpp
classify_windows/: ConsoleApplication7.cpp  ConsoleApplication7.sln  ConsoleApplication7.vcxproj  ConsoleApplication7.vcxproj.filters
onnx_python/: torch_model.py
yolov5-onnxruntime-linux/: README.md
yolov5-onnxruntime-windows/: CodeMap1.dgml  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
yolov5-onnxruntime-windows/src/: main.cpp
yolov5-onnxruntime_固定模型路径/: README.md
yolov5-onnxruntime_固定模型路径/onnxruntime-linux-x64-1.7.0/: GIT_COMMIT_ID
yolov5-onnxruntime_固定模型路径/src/: main.cpp
